# discord_search_bot

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.release  PRIVACY.md  TERMS.md  docker-compose.yml  readme.md
.github/workflows/: release.yml
gui/: package-lock.json  package.json
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: main.rs
gui/web/: index.html  main.js  styles.css
migrations/: 20251225000000_init.sql  20251225000001_sync_ranges.sql  20260503000000_version_subscriptions.sql
src/: command.rs  database.rs  event.rs  main.rs
src/command/: config.rs  help.rs  notify.rs  register.rs  search.rs  version.rs
src/command/search/: logic.rs  tests.rs
