[package]
name = "discord_search_bot"
version = "0.7.1"
edition = "2024"
publish = false

[package.metadata.release]
tag-prefix = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.22"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "chrono", "migrate"] }
dashmap = "6.1.0"
