[package]
name = "discord_search_bot"
version = "0.9.0"
edition = "2024"
publish = false

[package.metadata.release]
tag-prefix = ""
tag-name = "{{version}}"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.22"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "chrono", "migrate"] }
# Enables SQLCipher in SQLx's bundled SQLite build.
libsqlite3-sys = { version = "0.30.1", default-features = false, features = ["bundled-sqlcipher-vendored-openssl"] }
dashmap = "6.1.0"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
