[package]
name = "discord-search-bot-gui"
version = "0.1.0"
edition = "2024"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2", features = [] }
